--- a/collect/public/index.html
+++ b/collect/public/index.html
@@ -4,11 +4,17 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <meta name="Description" Content="小黑屋工具，工具，办公，办公工具，搜索，搜索工具，图片搜索工具，文献搜索工具，协作工具，查询">
+    <meta name=”Keywords” Content=”工具,小黑屋工具,办公工具,搜索工具″>
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title>小黑屋工具</title>
   </head>
   <body>
     <div id="app"></div>
+    <div style="display: none">
+      <script type="text/javascript">document.write(unescape("%3Cspan id='cnzz_stat_icon_1279441860'%3E%3C/span%3E%3Cscript src='https://v1.cnzz.com/z_stat.php%3Fid%3D1279441860%26show%3Dpic' type='text/javascript'%3E%3C/script%3E"));</script>
+
+    </div>
     <!-- built files will be auto injected -->
   </body>
 </html>
