--- a/collect/public/index.html
+++ b/collect/public/index.html
@@ -8,6 +8,25 @@
     <meta name=”Keywords” Content=”工具,小黑屋工具,办公工具,搜索工具″>
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title>小黑屋工具</title>
+    <script>
+        (function (doc, win) {
+            var docEl = doc.documentElement,
+                resizeEvt = 'orientationchange' in window ? 'orientationchange' : 'resize',
+                recalc = function () {
+                    var clientWidth = docEl.clientWidth;
+                    if (!clientWidth) return;
+                    if(clientWidth>=640){
+                        docEl.style.fontSize = '60px';
+                    }else{
+                        docEl.style.fontSize = 100 * (clientWidth / 640) + 'px';
+                    }
+                };
+
+            if (!doc.addEventListener) return;
+            win.addEventListener(resizeEvt, recalc, false);
+            doc.addEventListener('DOMContentLoaded', recalc, false);
+        })(document, window);
+    </script>
   </head>
   <body>
     <div id="app"></div>
