--- a/index.html
+++ b/index.html
@@ -1,1 +1,17 @@
-<!DOCTYPE html><html lang="en"><head><meta charset="utf-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width,initial-scale=1"><meta name="Description" content="小黑屋工具，工具，办公，办公工具，搜索，搜索工具，图片搜索工具，文献搜索工具，协作工具，查询"><meta name="”Keywords”" content="”工具,小黑屋工具,办公工具,搜索工具″"><link rel="icon" href="/favicon.ico"><title>小黑屋工具</title><link href="/css/app.11e262cf.css" rel="preload" as="style"><link href="/css/chunk-vendors.1e73e159.css" rel="preload" as="style"><link href="/js/app.2d8110cb.js" rel="preload" as="script"><link href="/js/chunk-vendors.26d74349.js" rel="preload" as="script"><link href="/css/chunk-vendors.1e73e159.css" rel="stylesheet"><link href="/css/app.11e262cf.css" rel="stylesheet"></head><body><div id="app"></div><div style="display: none"><script>document.write(unescape("%3Cspan id='cnzz_stat_icon_1279441860'%3E%3C/span%3E%3Cscript src='https://v1.cnzz.com/z_stat.php%3Fid%3D1279441860%26show%3Dpic' type='text/javascript'%3E%3C/script%3E"));</script></div><script src="/js/chunk-vendors.26d74349.js"></script><script src="/js/app.2d8110cb.js"></script></body></html>
+<!DOCTYPE html><html lang="en"><head><meta charset="utf-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width,initial-scale=1"><meta name="Description" content="小黑屋工具，工具，办公，办公工具，搜索，搜索工具，图片搜索工具，文献搜索工具，协作工具，查询"><meta name="”Keywords”" content="”工具,小黑屋工具,办公工具,搜索工具″"><link rel="icon" href="/favicon.ico"><title>小黑屋工具</title><script>(function (doc, win) {
+            var docEl = doc.documentElement,
+                resizeEvt = 'orientationchange' in window ? 'orientationchange' : 'resize',
+                recalc = function () {
+                    var clientWidth = docEl.clientWidth;
+                    if (!clientWidth) return;
+                    if(clientWidth>=640){
+                        docEl.style.fontSize = '60px';
+                    }else{
+                        docEl.style.fontSize = 100 * (clientWidth / 640) + 'px';
+                    }
+                };
+
+            if (!doc.addEventListener) return;
+            win.addEventListener(resizeEvt, recalc, false);
+            doc.addEventListener('DOMContentLoaded', recalc, false);
+        })(document, window);</script><link href="/css/app.4abbf6ac.css" rel="preload" as="style"><link href="/css/chunk-vendors.1e73e159.css" rel="preload" as="style"><link href="/js/app.90b92bf7.js" rel="preload" as="script"><link href="/js/chunk-vendors.26d74349.js" rel="preload" as="script"><link href="/css/chunk-vendors.1e73e159.css" rel="stylesheet"><link href="/css/app.4abbf6ac.css" rel="stylesheet"></head><body><div id="app"></div><div style="display: none"><script>document.write(unescape("%3Cspan id='cnzz_stat_icon_1279441860'%3E%3C/span%3E%3Cscript src='https://v1.cnzz.com/z_stat.php%3Fid%3D1279441860%26show%3Dpic' type='text/javascript'%3E%3C/script%3E"));</script></div><script src="/js/chunk-vendors.26d74349.js"></script><script src="/js/app.90b92bf7.js"></script></body></html>
