--- a/collect/public/index.html
+++ b/collect/public/index.html
@@ -2,10 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
+    <meta name="baidu-site-verification" content="code-FrsRJPWFCY" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <meta name="Description" Content="小黑屋工具，工具，办公，办公工具，搜索，搜索工具，图片搜索工具，文献搜索工具，协作工具，查询">
-    <meta name=”Keywords” Content=”工具,小黑屋工具,办公工具,搜索工具″>
+    <meta name=”Keywords” Content="工具,小黑屋工具,办公工具,搜索工具">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title>小黑屋工具</title>
     <script>
