--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><html lang="en"><head><meta charset="utf-8"><meta name="baidu-site-verification" content="code-FrsRJPWFCY" /><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width,initial-scale=1"><meta name="Description" content="小黑屋工具，工具，办公，办公工具，搜索，搜索工具，图片搜索工具，文献搜索工具，协作工具，查询"><meta name="”Keywords”" content="工具,小黑屋工具,办公工具,搜索工具"><link rel="icon" href="/favicon.ico"><title>小黑屋工具</title><script>(function (doc, win) {
+<!DOCTYPE html><html lang="en"><head><meta charset="utf-8"><meta name="baidu-site-verification" content="code-FrsRJPWFCY"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width,initial-scale=1"><meta name="Description" content="小黑屋工具，工具，办公，办公工具，搜索，搜索工具，图片搜索工具，文献搜索工具，协作工具，查询"><meta name="”Keywords”" content="工具,小黑屋工具,办公工具,搜索工具"><link rel="icon" href="/favicon.ico"><title>小黑屋工具</title><script>(function (doc, win) {
             var docEl = doc.documentElement,
                 resizeEvt = 'orientationchange' in window ? 'orientationchange' : 'resize',
                 recalc = function () {
