--- a/index.html
+++ b/index.html
@@ -14,4 +14,17 @@
             if (!doc.addEventListener) return;
             win.addEventListener(resizeEvt, recalc, false);
             doc.addEventListener('DOMContentLoaded', recalc, false);
-        })(document, window);</script><link href="/css/app.4abbf6ac.css" rel="preload" as="style"><link href="/css/chunk-vendors.1e73e159.css" rel="preload" as="style"><link href="/js/app.90b92bf7.js" rel="preload" as="script"><link href="/js/chunk-vendors.26d74349.js" rel="preload" as="script"><link href="/css/chunk-vendors.1e73e159.css" rel="stylesheet"><link href="/css/app.4abbf6ac.css" rel="stylesheet"></head><body><div id="app"></div><div style="display: none"><script>document.write(unescape("%3Cspan id='cnzz_stat_icon_1279441860'%3E%3C/span%3E%3Cscript src='https://v1.cnzz.com/z_stat.php%3Fid%3D1279441860%26show%3Dpic' type='text/javascript'%3E%3C/script%3E"));</script></div><script src="/js/chunk-vendors.26d74349.js"></script><script src="/js/app.90b92bf7.js"></script></body></html>
+        })(document, window);
+
+        (function(){
+            var bp = document.createElement('script');
+            var curProtocol = window.location.protocol.split(':')[0];
+            if (curProtocol === 'https'){
+                bp.src = 'https://zz.bdstatic.com/linksubmit/push.js';
+            }
+            else{
+                bp.src = 'http://push.zhanzhang.baidu.com/push.js';
+            }
+            var s = document.getElementsByTagName("script")[0];
+            s.parentNode.insertBefore(bp, s);
+        })();</script><link href="/css/app.4abbf6ac.css" rel="preload" as="style"><link href="/css/chunk-vendors.1e73e159.css" rel="preload" as="style"><link href="/js/app.90b92bf7.js" rel="preload" as="script"><link href="/js/chunk-vendors.26d74349.js" rel="preload" as="script"><link href="/css/chunk-vendors.1e73e159.css" rel="stylesheet"><link href="/css/app.4abbf6ac.css" rel="stylesheet"></head><body><div id="app"></div><div style="display: none"><script>document.write(unescape("%3Cspan id='cnzz_stat_icon_1279441860'%3E%3C/span%3E%3Cscript src='https://v1.cnzz.com/z_stat.php%3Fid%3D1279441860%26show%3Dpic' type='text/javascript'%3E%3C/script%3E"));</script></div><script src="/js/chunk-vendors.26d74349.js"></script><script src="/js/app.90b92bf7.js"></script></body></html>
