--- a/collect/public/index.html
+++ b/collect/public/index.html
@@ -4,9 +4,11 @@
     <meta charset="utf-8">
     <meta name="baidu-site-verification" content="code-FrsRJPWFCY" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta http-equiv="Cache-Control" content="max-age=3600"/>
+    <meta name="revised" content="小黑屋工具, 2020/11/20"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
-    <meta name="Description" Content="小黑屋工具，工具，办公，办公工具，搜索，搜索工具，图片搜索工具，文献搜索工具，协作工具，查询">
-    <meta name=”Keywords” Content="工具,小黑屋工具,办公工具,搜索工具">
+    <meta name="Description" Content="小黑屋工具主要是一个收集互联网各行业工具的网站，收集设计，运营，市场，产品，程序员等好用的工具快捷入口，节省日常百度查询找不到合适的工具引发的烦恼">
+    <meta name=”Keywords” Content="工具,小黑屋工具,办公工具,搜索工具，技术工具">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title>小黑屋工具</title>
     <script>
